# dq-sentinel

./: .env.ejemplo  .gitignore  Dockerfile  README.md  docker-compose.yml  ejecutar.py  inyector_sucio.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
analisis/: graficos.py
centinela/: bd.py  modelos.py  motor.py  notificador.py  reporte.py  validadores.py
centinela/contratos/: dim_indicador.yml  dim_pais.yml  hechos_valor_indicador.yml
centinela/plantillas/: reporte.html.j2
dags/: centinela_calidad.py
seed/: 01_esquema.sql  02_datos.sql
tests/: conftest.py  test_dag.py  test_humo.py  test_inyector.py  test_motor.py  test_notificador.py  test_reporte.py  test_validadores.py
